--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "dependencies": {
     "commander": "^11.1.0",
     "fast-glob": "^3.3.2",
-    "chalk": "^4.1.2"
+    "chalk": "^4.1.2",
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
     "@types/node": "^20.11.0",
