--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "scripts": {
     "build": "tsc",
     "dev": "ts-node src/index.ts",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "test": "node --test dist/**/*.test.js",
+    "test:watch": "node --test --watch dist/**/*.test.js"
   },
   "keywords": ["cli", "dependencies", "analysis"],
   "author": "",
